fix vertical align for navbar mat icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,8 @@ nav {
 .container {
     margin-top: 30px !important;
 }
+
+.material-icons {
+    display: inline !important;
+    vertical-align: middle;
+}
